[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/Chatbox/chatbox.gd" type="Script" id=1]

[node name="Chatbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatHistory" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = false
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="InputLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 51.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.145098, 0.980392, 0.870588, 1 )
text = "[Team]: "

[node name="ChatInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Press TAB to change groups..."
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/ChatInput" to="." method="_on_ChatInput_text_entered"]
